@@ -1,5 +1,8 @@
-$Id: Changelog.txt,v 1.171 2012/06/20 21:05:56 nanard Exp $
+$Id: Changelog.txt,v 1.173 2012/06/23 22:36:34 nanard Exp $
 miniUPnP client Changelog.
+
+2012/06/23:
+  More error return checks in upnpc.c
 
 2012/06/20:
   fixed CMakeLists.txt
